<resources>
    <string name="app_name">CookingBook</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="notes">Notes</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="value">Value</string>
    <string name="ingredient">Ingredient</string>
    <string name="tags">Tags</string>
    <string name="image_of_recipe">Image of recipe</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="ingredients">Ingredients:</string>
    <string name="notes_v">Notes:</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="deleteRecipe">Delete this recipe?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_tag">Add Tag</string>
    <string name="link">Youtube link</string>
    <string name="contact">Contact information: \n mail: edmko195@gmail.com</string>
    <string name="about">About</string>
    <string name="tag_error">Tag must have 1 character at least</string>
    <string name="name_error">Name must have 1 character at least</string>
    <string name="ingredient_error">Ingredient must have 1 character at least</string>
    <string name="remove_tag">remove tag</string>
</resources>
