<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.edmko.cookingbook.ui.addrecipe.AddRecipeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"

                tools:context=".ui.addrecipe.AddRecipeFragment">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/image_of_recipe"
                        android:background="@drawable/ic_insert_photo_24px" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_toEndOf="@+id/imgPhoto"
                        android:hint="@string/name"
                        app:hintTextColor="@color/colorPrimary">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/evName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewmodel.name}"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionDone"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/author"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name"
                        android:layout_margin="5dp"
                        android:layout_toEndOf="@+id/imgPhoto"
                        android:hint="@string/author"
                        android:inputType="textPersonName">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/evAuthor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewmodel.author}"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionDone"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_link"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/link">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/evYoutubeLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:text="@={viewmodel.link}"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_tag"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/tags">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/evTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:imeOptions="actionDone"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_tag"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                    android:overScrollMode="never"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addIngredient"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="2"
                        android:hint="@string/ingredient">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/evIngredient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionDone"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addValue"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/value">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/evValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionDone"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnAddIngredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_ingredient"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredientsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_margin="5dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notes"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/notes">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/evNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.notes}" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="85dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btnSaveRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:paddingStart="60dp"
            android:paddingTop="10dp"
            android:paddingEnd="60dp"
            android:paddingBottom="10dp"
            android:text="@string/save_recipe"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </RelativeLayout>
</layout>